# pacelf.github.io

./: .eslintrc.js  .gitignore  .package.json.swp  LICENSE  README.md  TODO.md  csv-to-json.py  get-pacelf-files.py  index.html  manifest.json  pacelf-index.csv  package.json  precache-manifest.137cb48feca16e1718a1266c225a13ec.js  precache-manifest.14f23c8c9c389dd9b5ec9412f699699f.js  precache-manifest.292c95670d9017030bf8a0439548efb9.js  precache-manifest.2a12873bfab7bd8f43952853341fa1db.js  precache-manifest.34ea7c8de62568aa8bc45830869bec86.js  precache-manifest.452cdd8cbe6491250f4cff6527835c44.js  precache-manifest.80fafc756341436a8f4083b67f4132f5.js  precache-manifest.8799dbe395771795b9bd301fb2ae6373.js  precache-manifest.a1973f1456ae796cfed7302233fb9295.js  pyproject.toml  quasar.conf.js  quasar.config.js  quasar.extensions.json  requirements.txt  schema.json  service-worker.js  sw.js  xmltojson.py
PacELF_Phase6/: pacelf-index.csv
PacELF_Phase7/: PacELF_Master_File Phase 7 working copy 28feb2023 v3.xlsx  PacELF_Master_File Phase 7 working copy 28feb2023 v4.xlsx
assets/: BackgroundPage.56ab6ee5.css  BackgroundPage.98c340d1.js  Contact-us.d8dd1771.js  ErrorNotFound.f27ddcc9.js  IndexPage.1d4eb4a4.js  LibraryPage.14d9e730.css  LibraryPage.61610ade.js  MainLayout.50165242.js  QBtn.f07215a0.js  QImg.062b8a64.js  QPage.94562b67.js  QSpinner.e9b89df9.js  Ripple.380edac8.js  index.4fd0e643.css  index.97c51684.js  render.bedc93c9.js  selection.0c71da57.js  uid.8472b7b3.js  use-dark.bd71bfe5.js  use-size.8c1e5cd2.js
css/: app.900f43db.css
js/: 3.0c9a1556.js  (+14 more)
(+1133 files in other folders)
